sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:11: error: reassignment to val
        i=i+1
         ^AlgBubbleSort1:14: error: reassignment to val
        i=i+1
         ^