sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var x=0
  var fin=getNombreValeurs()
  var y=fin
  var i=0
  while (x<=fin-2){
    for (i <- 0 to y-2){
      if (plusPetit(i,i+1)==false){
        echange(i,i+1)
        i=i+1
      }
      else{
        i=i+1
      }
    }
    x=x+1
    i=0
    y=y-1
  }  
}
